--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
     height: 25%;
     width: 100%;
     background-color: var(--primary-color);
+    color: var(--white);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    font-size: 3rem;
 }
 
 .inputs {
