--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,16 @@
 }   
 
 .display {
-    height: 25%;
+    height: 50%;
     width: 100%;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     color: var(--white);
     display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: flex-end;
     font-size: 3rem;
+    letter-spacing: 5px;
 }
 
 .inputs {
@@ -33,15 +34,29 @@
 
 .btn {
     border: none;
-    padding: 1rem 1.5rem;
-    background-color: var(--primary-color);
+    padding: .5rem;
+    background-color: var(--background-color);
     color: var(--white);
-    font-size: 1.5rem;
-    border-radius: 50px;
+    font-size: 2rem;
+}
+
+.operation {
+    color: var(--primary-color);
 }
 
 #evaluate {
-    padding: 1rem 3.5rem;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
+    padding: 0.5rem 1rem;
     color: var(--background-color);
+    border-radius: 100px;
+}
+
+#clear {
+    transform: rotate(180deg);
+    color: var(--orange);
+}
+
+#backspace {
+    color: var(--red);
+    font-weight: bold;
 }
