--- a/src/variables.css
+++ b/src/variables.css
@@ -1,6 +1,8 @@
 html {
-    --background-color: #111;
-    --primary-color: #333;
-    --secondary-color: cyan;
-    --white: #fff;
+    --background-color: #111111;
+    --primary-color: #00BFA5;
+    --secondary-color: #333333;
+    --white: #ffffff;
+    --orange: #FF6D00;
+    --red: #d32f2f;
 }
