--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
-img {
-    width: 50%;
-    max-width: 100%;
+html {
+    --primary-color: #00BFA5;
+    --dark-gray: #111111;
+    --gray: #333333;
+    --white: #ffffff;
 }
 
 .App {
@@ -8,13 +10,13 @@ img {
     flex-direction: column;
     height: 100vh;
     width: 100%;
-    background-color: var(--background-color);
+    background-color: var(--dark-gray);
 }   
 
 .display {
     height: 25%;
     width: 100%;
-    background-color: var(--secondary-color);
+    background-color: var(--gray);
     color: var(--white);
     display: flex;
     flex-direction: row-reverse;
@@ -40,7 +42,7 @@ img {
 .btn {
     border: none;
     background-color: transparent;
-    padding: 2.5rem 10rem;
+    padding: 2% 10%;
     color: var(--white);
     font-size: 2rem;
 }
@@ -55,7 +57,7 @@ img {
 }
 
 
-@media screen and (min-width:300px) and (max-width:700px){
+@media screen and (min-width:300px) and (max-width:600px){
     .btn {
         padding: 5% 7%;
     }
